--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.4",
     "uuidv4": "^6.2.13"
